compiler/tests/fail/stack_allocation/x86-64/merge_distinct_regions.jazz
// Currently, when we merge the tables produced by the analysis (for if and
// while), we expect variables to point to the same region in both branches.
// If not, we erase what is known about the variable.
// We could be more clever.

export fn main (reg u64 b, reg u64 i) -> reg u64 {
  stack u64[10] s;
  reg ptr u64[1] r;
  reg u64 res;

  s[0] = 1;

  if (b != 0) {
    r = s[i:1]; // r points to s[i:1]
    r[0] = 1;
  } else {
    r = s[0:1]; // r points to s[0:1]
    r[0] = 1;
  }
  // s[i:1] != s[0:1] -> the analysis erases what is known about r

  res = r[0]; // no region associated to variable r
  return res;
}
